--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "8.10.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "7.55.0",
     "react-icons": "^5.5.0",
     "react-popper": "2.3.0",
@@ -62,7 +63,9 @@
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
-    "vaul": "1.1.2"
+    "vaul": "1.1.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
